Fixed spacing bug, ...
If a parapgrah had an Inline code block (``), and another one on the line right below, sometimes their grey areas would touch.

Here's a minimal example: https://codepen.io/dcastro/pen/MvMdqd
Less minimal example: https://codepen.io/dcastro/pen/jLjRyy

Dunno why this happens only sometimes, maybe half-pixel rendering thingies? aliasing? dunno.

Chrome: some blocks get merged
Firefox: all blocks get merged
IE / Edge: surprisingly, it works ok!

--- a/css/poole.css
+++ b/css/poole.css
@@ -162,7 +162,7 @@ pre {
   font-family: "FiraCode", "Menlo", "Monaco", "Consolas", "Inconsolata", "Courier New", monospace;
 }
 code {
-  padding: .25em .5em;
+  padding: .22em .5em;
   font-size: 85%;
   color: #bf616a;
   background-color: #f9f9f9;
